crates/sui-graphql-macros/tests/compile/missing_field_attr.stderr
error: missing #[field(path = "...")] attribute
 --> tests/compile/missing_field_attr.rs:7:5
  |
7 |     address: String,
  |     ^^^^^^^
