crates/sui-graphql-macros/tests/compile/missing_field_attr.rs
use sui_graphql_macros::Response;

#[derive(Response)]
#[response(schema = "tests/test_schema.graphql")]
struct BadStruct {
    // Missing #[field(path = "...")] attribute
    address: String,
}

fn main() {}
